<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="chatview_empty_message">Hello! I\'m QuranGPT, your guide to exploring the Quran. Ask me about passages, explanations, or even request a prayer. </string>
  <string name="chatview_delete_confirmation_title">Delete Confirmation</string>
  <string name="chatview_delete_confirmation_desc">Are you sure you want to delete all messages?</string>
  <string name="chatview_delete_selected_confirmation_desc">Are you sure you want to delete selected messages?</string>
  <string name="chatview_no_internet">No internet. Chat requires connection.</string>
  <string name="mnuAskBibleGPT">Ask QuranGPT</string>
<!--  <string name="chatview_quota_reached">You\'ve reached your daily message limit. Upgrade to QuranGPT Pro for unlimited access with a 3-day free trial. Cancel anytime. Type \'info\' for details.</string>-->
  <string name="chatview_quota_reached">
You\'ve reached your daily limit. Start your 3-day free trial for unlimited access to QuranGPT Pro (then XXPRICEXX/month). You can cancel anytime during the 3-day trial and won\'t be charged. Type \'info\' for more details.
  </string>
  <string name="chatview_quota_reached_info">info</string>
  <string name="taptargetview_fap_biblegpt_title">Chat with QuranGPT</string>
  <string name="taptargetview_fap_biblegpt_desc">Your AI-powered Quran assistant. Ask questions, explore meanings, and seek guidance.</string>
  <string name="taptargetview_fap_biblegpt_sura">Chapters</string>
  <string name="taptargetview_fap_biblegpt_sura_desc">Dive into the Quran by chapters and their verses.</string>
  <string name="taptargetview_fap_biblegpt_juz">Sections (Juz)</string>
  <string name="taptargetview_fap_biblegpt_juz_desc">Navigate the Quran divided into 30 sections.</string>
  <string name="taptargetview_fap_biblegpt_bookmark">Bookmarks</string>
  <string name="taptargetview_fap_biblegpt_bookmark_desc">Save and organize verses you want to revisit easily.</string>
  <string name="taptargetview_fap_biblegpt_search">Search</string>
  <string name="taptargetview_fap_biblegpt_search_desc">Quickly find verses or topics in the Quran.</string>

  <string name="qurangpt">QuranGPT</string>
  <string name="qurangpt_pro">QuranGPT Pro</string>

  <!-- res/values/strings.xml -->
  <string name="upgrade_to_premium">Upgrade to Pro</string>
  <string name="premium_features_description">
    Enjoy exclusive premium features:\n
    &#8226; Unlimited QuranGPT answers.\n
    &#8226; Faster response times.\n
    &#8226; Advanced AI for deeper insights.\n
  </string>
  <string name="monthly_plan_text">Monthly</string>
  <string name="yearly_plan_text">Yearly</string>
  <string name="discount_badge_text">Save 30%</string>
  <string name="upgrade_now">Start 7 day free trial</string>
  <string name="watch_ad_and_reset_limit">Watch the full ad to reset the limit</string>
  <string name="ad_not_available">Ad not available. Please try again later.</string>
  <string name="no_thanks">Maybe later</string>
  <string name="trial_conditions">• Cancel anytime\n• No charges during free trial\n• Exclusive features during trial</string>
  <string name="message_input_hint">Type your message</string>
  <string name="admob_banner_id" translatable="false">ca-app-pub-8655759847032068/7379234820</string>
  <string name="admob_rewarded_id" translatable="false">ca-app-pub-8655759847032068/3445692813</string>
  <string name="or_label">or</string>
</resources>
