<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subscription_overlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#90000000">

  <!-- Main Overlay Card -->
  <LinearLayout
      android:id="@+id/overlay_card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical"
      android:background="@color/white"
      android:padding="24dp">

    <TextView
        android:id="@+id/overlay_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/upgrade_to_premium"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary_color_dark" />

    <TextView
        android:id="@+id/overlay_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/premium_features_description"
        android:textAlignment="textStart"
        android:textColor="@color/gray"
        android:textSize="16sp" />


    <!-- Subscription Options Container -->
    <LinearLayout
        android:id="@+id/subscription_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="4dp">

      <!-- Monthly Plan Layout -->
      <LinearLayout
          android:id="@+id/monthly_plan_card"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginEnd="8dp"
          android:orientation="vertical"
          android:background="@drawable/unselected_plan_background"
          android:padding="16dp">

        <TextView
            android:id="@+id/monthly_plan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_plan_text"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
            android:id="@+id/monthly_plan_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9.99€"
            android:textColor="@color/primary_text_color" />
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / month"
              android:textColor="@color/primary_text_color"/>
        </LinearLayout>
      </LinearLayout>

      <!-- Yearly Plan Layout -->
      <LinearLayout
          android:id="@+id/yearly_plan_card"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:layout_marginStart="8dp"
          android:orientation="vertical"
          android:background="@drawable/selected_plan_background"
          android:padding="16dp">

        <TextView
            android:id="@+id/yearly_plan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearly_plan_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
          <TextView
              android:id="@+id/yearly_plan_price"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="99.99€"
              android:textColor="@color/primary_text_color" />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text=" / year"
              android:textColor="@color/primary_text_color"/>
        </LinearLayout>

        <TextView
            android:id="@+id/discount_badge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/discount_badge_background"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/discount_badge_text"
            android:textColor="@color/primary_text_color"
            android:textSize="12sp"
            android:textStyle="bold" />
      </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upgrade_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/upgrade_now"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/watch_ad_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/watch_ad_and_reset_limit"
        android:textAllCaps="false" />

    <ProgressBar
        android:id="@+id/watch_ad_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:visibility="gone" />


    <!-- Bullet Point Texts -->
    <TextView
        android:id="@+id/trial_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trial_conditions"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:layout_marginEnd="8dp" />

    <!-- divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary_color_dark" />
    <TextView
        android:id="@+id/close_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/no_thanks"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        android:textStyle="bold" />
  </LinearLayout>
</RelativeLayout>
